--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -49,20 +49,21 @@ body{
 <body id="page-top" class="index">
 
 <h6>
-
 <table>
-
   <tbody>
-   
+
   </tbody>
 </table>
 
 <br>
 
-
  <% @products.each do |product| %>
-<div class="col-md-4">
- <h6><%= image_tag product.image.url(:thumb) %></h6><h5>カテゴリ:<%= product.category %></h5><h5>商品名:<%= product.name %></h5><h5>1日のレンタル料金: ¥<%= product.price_per_day %></h5> <h5 id ="below"></h5><%= link_to 'Show', product %><h6><%= link_to 'Edit', edit_product_path(product) %></h6><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><h6></div>
+<div class="col-xs-12 col-md-6 col-lg-4">
+ <h6><%= image_tag product.image.url(:thumb) %></h6><h5>カテゴリ:<%= product.category %></h5><h5>商品名:<%= product.name %></h5><h5>1日のレンタル料金: ¥<%= product.price_per_day %></h5> <h5 id ="below"></h5><%= link_to 'Show', product %><h6>
+<% if user_signed_in? %>
+ <%= link_to 'Edit', edit_product_path(product) %></h6>
+ <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><h6></div> 
+<% end %>
 </div>
     <% end %>
 
