--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -44,9 +44,6 @@ body{
   </head>
   <body>
 
-
-
-
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -84,9 +81,8 @@ body{
   <%= @product.category %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product), class: "btn btn-danger" %> |
-<%= link_to 'Back', products_path, class: "btn btn-success" %>
-
+<%= link_to '編集する', edit_product_path(@product), class: "btn btn-danger" %> |
+<%= link_to '戻る', products_path, class: "btn btn-success" %>
 
 <% if @sold_out.present? %>
 
@@ -97,8 +93,6 @@ body{
   <% if @sold_out.present? %>
   <h4><%= @sold_out %></h4>
   <% end %>
-
-
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
